--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meccano-iot-servicemanager",
   "version": "1.0.0",
   "description": "Meccano IoT ServiceManager is the maintenance module of Meccano IoT Platform.",
-  "main": "server/app.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -34,10 +34,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/meccano-iot/gateway"
+    "url": "https://github.com/meccano-iot/servicemanager"
   },
   "bugs": {
-    "url": "https://github.com/meccano-iot/gateway/issues"
+    "url": "https://github.com/meccano-iot/servicemanager/issues"
   },
-  "homepage": "https://github.com/meccano-iot/gateway"
+  "homepage": "https://github.com/meccano-iot/servicemanager"
 }
