Feedback Demo Report Plugin
Feedback demo report plugin introduced.
Adjustments on device avg time plugin

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ build/Release
 node_modules
 
 plugins/deviceAvgTime:1.0/assets/output.png
+
+plugins/updatesByDevice:1.0/assets/output.png
+
+plugins/feedbackDemo:1.0/assets/output.png
