--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "meccano-iot-servicemanager",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Meccano IoT ServiceManager is the maintenance module of Meccano IoT Platform.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "keywords": [
     "meccano",
